[project]
name = "Supermarket-Together-Jarvis"
version = "0.1.0"
description = "Simple speech recognition + tts calculation program"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.3",
]
